base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vamserlike-backend-service
  labels:
    app: vamserlike-backend
spec:
  type: NodePort
  selector:
    app: vamserlike-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
