base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vamserlike-backend-ingress
  labels:
    app: vamserlike-backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/Health
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/subnets: "subnet-02dba205b2941ae93,subnet-017e78922b8afe533"
    alb.ingress.kubernetes.io/group.name: vamserlike-backend
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vamserlike-backend-service
                port:
                  number: 80
